2003-10-27  Braden McDaniel  <braden@endoframe.com>

	Launch lookat with a shell script to set LD_LIBRARY_PATH
	appropriately.

	* configure.ac:  Generate lookat shell script.
	* openvrml.spec.in:  Added lookat-bin to lookat package.
	* src/lookat/Makefile.am:  Changed binary executable from
	"lookat" to "lookat-bin".  "lookat" is now a shell script.
	* src/lookat/lookat.in:  Added file.

2003-10-26  Braden McDaniel  <braden@endoframe.com>

	Added the beginning of a test suite.

	* Makefile.am:  Added "test" subdirectory.
	* configure.ac:  Substitute GRE_PATH variable.
	* m4/jdk.m4:  Modified OV_WITH_JDK to substitute JDK_LIBRARY_PATH
	variable.
	* test/Makefile.am:  Added file.
	* test/browser_basic.cpp:  Added file.

2003-10-23  Braden McDaniel  <braden@endoframe.com>

	Move check for libGLU to AX_CHECK_GLU.

	* openvrml-gl.pc.in
	* m4/Makefile.am
	* m4/ax_check_gl.m4
	* m4/ax_check_glu.m4
	* m4/ax_check_glut.m4
	* src/libopenvrml-gl/openvrml/gl/Makefile.am

2003-10-21  Braden McDaniel  <braden@endoframe.com>

	Replace usage of node::to_<node> with node_cast.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2003-10-20  Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.14.2.

	* doc/doxygen-header:  Removed unsightly filename extensions
	from URIs.
	* src/libopenvrml/openvrml/vrml97node.cpp
	(elevation_grid_node::insert_geometry):  Added null checks for
	SFNode fields.
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Fixed crashes
	resulting from size_t carelessness.

2003-10-14  Braden McDaniel  <braden@endoframe.com>

	Generate Doxyfile from configure in order to take advantage of
	PACKAGE_NAME and PACKAGE_VERSION substitutions.
